bugs fixed !
screen was rendering too much on when showing search results now fixed also changed colors of title and much bugs fixed in this version

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -2,7 +2,7 @@
 .footer {
     background-color: var(--black3);
     padding: 50px 0;
-    color: white;
+    color: rgb(255, 255, 0);
     position: relative;
     .contentWrapper {
         display: flex;
