--- a/src/components/genres/style.scss
+++ b/src/components/genres/style.scss
@@ -6,7 +6,7 @@
         padding: 3px 5px;
         font-size: 12px;
         border-radius: 4px;
-        color: white;
+        color: rgb(255, 255, 255);
         white-space: nowrap;
     }
 }
