--- a/src/components/switchTabs/style.scss
+++ b/src/components/switchTabs/style.scss
@@ -21,7 +21,7 @@
             cursor: pointer;
             transition: color ease 0.3s;
             &.active {
-                color: white;
+                color: rgb(255, 255, 255);
             }
         }
         .movingBg {
