--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -49,11 +49,11 @@
         color: rgb(218, 225, 26);
         text-align: center;
         position: relative;
-        max-width: 600px;
+        max-width: 400px;
         margin: 0 auto;
         .title {
             font-size: 50px;
-            font-weight: 700;
+            font-weight: 640;
             margin-bottom: 10px;
             @include md {
                 margin-bottom: 0;
@@ -61,9 +61,10 @@
             }
         }
         .subTitle {
-            font-size: 18px;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size:13px;
             font-weight: 500;
-            margin-bottom: 30px;
+            margin-bottom: 60px;
             @include md {
                 font-size: 14px;
                 font-family: monospace;
@@ -76,33 +77,33 @@
             input {
                 width: calc(100% - 100px);
                 height: 50px;
-                background-color: white;
+                background-color: rgb(235, 242, 134);
                 outline: 0;
                 border: 40;
                 border-radius:  0px 30px 0;
                 padding: 0 15px;
                 font-size: 14px;
                 @include md {
-                    width: calc(100% - 150px);
+                    width: 800px;
                     height: 60px;
                     font-size: 20px;
-                    padding: 0 60px;
+                    padding: 10 0 60px;
                 }
             }
             button {
                 width: 100px;
                 height: 50px;
                 background: var(--gradient);
-                color: white;
+                color: #9fff03;
                 outline: 0;
                 border: 10;
                 border-radius:  0px 30px 0;
                 font-size: 16px;
                 cursor: pointer;
                 @include md {
-                    width: 150px;
+                    width: 250px;
                     height: 60px;
-                    font-size: 18px;
+                    font-size:18px;
                 }
             }
         }
