--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -8,8 +8,8 @@
         margin-bottom: 40px;
     }
     .carouselTitle {
-        font-size: 40px;
-        color: rgb(246, 164, 164);
+        font-size: 21px;
+        color: rgb(255, 255, 4);
         font-weight: bolder;
     }
 }
