--- a/src/pages/searchResult/style.scss
+++ b/src/pages/searchResult/style.scss
@@ -15,7 +15,7 @@
         background-clip: text;
         color: transparent;
         margin-bottom: 65px;
-        margin-left: 422px;
+        margin-left: 22px;
     }
     
     .content {
